[package]
name = "tf2monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
regex_static = "0.1.1"
bus = "2.4.1"
once_cell = "1.20.2"
chrono = "0.4.39"
date_component = "0.4.1"
fs-err = "3.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

log = { version = "0.4", features = [
    "max_level_info",
    "release_max_level_info",
] }

simple_logger = { version = "5.0", default-features = false, features = [
    "colors",
] }

eframe = { version = "0.29.1", default-features = false, features = [
    "glow",
    "default_fonts",
] }

egui_extras = { version = "0.29.1", default-features = false, features = [
    "http",
    "image",
] }

image = { version = "0.25.5", default-features = false, features = ["jpeg"] }

reqwest = { version = "0.12.9", features = ["blocking", "json"] }


#
# Platform specific crates
#
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
