[package]
name = "tf2monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
regex_static = "0.1.1"
bus = "2.4.1"
once_cell = "1.21.3"
chrono = "0.4.41"
date_component = "0.4.3"
fs-err = "3.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

log = { version = "0.4.27", features = [
    "max_level_info",
    "release_max_level_info",
] }

simple_logger = { version = "5.0", default-features = false, features = [
    "colors",
] }

eframe = { version = "0.32.0", default-features = false, features = [
    "glow",
    "default_fonts",
] }

egui_extras = { version = "0.32.0", default-features = false, features = [
    "http",
    "image",
] }

image = { version = "0.25.6", default-features = false, features = ["jpeg"] }

reqwest = { version = "0.12.22", features = ["blocking", "json"] }
# url = "2.4"
translators = { version = "0.1.5", features = ["google"] }

# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

scraper = "0.23.1"

rayon = "1.10.0"

# [dependencies.winit]
# # version = "*"
# version = "=0.30.9"
# features = ["default"]

#
# Platform specific crates
#
[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
