[package]
name = "tf2monitor"
version = "0.1.1"
edition = "2021"

[dependencies]
regex = "1.12.2"
regex_static = "0.1.1"
bus = "2.4.1"
once_cell = "1.21.3"
chrono = "0.4.42"
date_component = "0.4.7"
fs-err = "3.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

log = { version = "0.4.29", features = [
    "max_level_info",
    "release_max_level_info",
] }

simple_logger = { version = "5.1", default-features = false, features = [
    "colors",
] }

eframe = { version = "0.33.3", default-features = false, features = [
    "glow",
    "default_fonts",
] }

egui_extras = { version = "0.33.3", default-features = false, features = [
    "http",
    "image",
] }

image = { version = "0.25.9", default-features = false, features = ["jpeg"] }

reqwest = { version = "0.12.28", features = ["blocking", "json"] }
translators = { version = "0.1.5", features = ["google"] }

sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

scraper = "0.25.0"

rayon = "1.11.0"
pollster = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

#
# Platform specific crates
#
[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
